--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: 料理本を出版しよう。
+title: タイトル：『料理本を出版しよう。』
 description: 書籍のサポートページへようこそ
 github:
   is_project_page: false
